# ai-app-compiler

./: .gitignore  API_REFERENCE.md  CHANGES.md  CONTRIBUTING.md  DEBUGGING_GUIDE.md  DEPLOYMENT.md  Dockerfile  INDEX.md  INSTALL_DOCKER.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_COMPLETE.md  README_RUN.md  SINGLE_LOCALHOST.md  START.md  STARTUP.md  docker-compose.local.yml  docker-compose.yml  health-check.bat  install-docker.bat  nginx.conf  render.yaml  run-full-localhost.bat  run-single-localhost.bat  run-single-localhost.sh  start-all.bat  start-backend.bat  start-backend.ps1  start-local.bat  start-local.sh  start-stack.bat  start-stack.sh  test-backend-api.bat  test-backend-api.ps1
AI-App-Compiler/: .gitignore  Makefile  README.md  docker-compose.yml
ai-compiler/: .gitignore  ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICK_START.md  (+5 more)
apps/api/: .env.example  pyproject.toml  requirements.txt
apps/api/src/compiler_api/: __init__.py
apps/api/src/compiler_api/core/: app.py
apps/api/src/compiler_api/routes/: __init__.py  auth.py  runtime.py
apps/api/src/compiler_api/schemas/: __init__.py  runtime.py
apps/api/src/compiler_api/services/: __init__.py  intent_extraction.py  intent_patterns.py  repair_engine.py  repair_engine_patterns.py  runtime_simulator.py  runtime_simulator_patterns.py  schema_generator.py  schema_generator_patterns.py  system_design.py  system_design_patterns.py
apps/api/src/compiler_api/tests/: conftest.py  test_intent_extraction.py  test_repair_engine.py  test_runtime_simulator.py  test_schema_generator.py  test_system_design.py
(+117 files in other folders)
